--- a/template.yaml
+++ b/template.yaml
@@ -42,5 +42,5 @@ Resources:
   TestBucket:
     Type: 'AWS::S3::Bucket'
     Properties:
-      BucketName: "test-bucket"
+      BucketName: "bucket-example"
 
