--- a/template.yaml
+++ b/template.yaml
@@ -41,7 +41,7 @@ Resources:
       Environment:
         Variables:
           REGION: "ap-northeast-1"
-          S3_ENDPOINT: "http://localhost:4572"
+          S3_ENDPOINT: "http://localstack:4572"
 
 
   TestBucket:
